Added node build dependencies and stub of readme.md

--- a/package.json
+++ b/package.json
@@ -1,11 +1,28 @@
 {
   "name": "BIS_Viz_Toolkit",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A starter toolkit for creating data visualizations within BIS",
+  "main": "index.html",
+  "author": "Francesco Merletti <me@fm.to.it>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:UK-BIS-Analysis/BIS_Viz_Toolkit.git"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "almond": "^0.3.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-compress": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-filerev": "^2.2.0",
+    "grunt-regex-replace": "^0.2.6",
+    "grunt-usemin": "^3.0.0"
+  }
 }
