--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "jquery": "~2.1.4",
     "jQuery.XDomainRequest": "~1.0.4",
     "requirejs": "~2.1.18",
-    "fontawesome": "~4.3.0"
+    "fontawesome": "~4.3.0",
+    "crossfilter": "~1.3.11"
   },
   "resolutions": {
     "d3": "~3.5.6"
