--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,32 @@
 {
-  "name": "BIS_Viz_Toolkit",
-  "version": "0.0.0",
-  "authors": [
-    "Francesco Merletti <me@fm.to.it>"
-  ],
-  "description": "Starter kit for visualizations in D3 for BIS Analysis",
-  "main": "index.html",
-  "license": "MIT",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "libs",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "bootstrap": "~3.3.5",
-    "d3": "~3.5.6",
-    "c3": "~0.4.10",
-    "jquery": "~2.1.4",
-    "jQuery.XDomainRequest": "~1.0.4",
-    "requirejs": "~2.1.18",
-    "fontawesome": "~4.3.0",
-    "crossfilter": "~1.3.11",
-    "select2": "~4.0.0"
-  },
-  "resolutions": {
-    "d3": "~3.5.6"
-  }
+    "name": "BIS_Viz_Toolkit",
+    "version": "0.0.0",
+    "authors": [
+        "Francesco Merletti <me@fm.to.it>"
+    ],
+    "description": "Starter kit for visualizations in D3 for BIS Analysis",
+    "main": "index.html",
+    "license": "MIT",
+    "private": true,
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "libs",
+        "test",
+        "tests"
+    ],
+    "dependencies": {
+        "bootstrap": "~3.3.5",
+        "d3": "~3.5.6",
+        "jquery": "~3.0.0-alpha1+compat",
+        "jQuery.XDomainRequest": "~1.0.4",
+        "requirejs": "~2.1.20",
+        "fontawesome": "~4.3.0",
+        "crossfilter": "~1.3.11",
+        "select2": "~4.0.0",
+        "dcjs": "~2.0.0-beta.12"
+    },
+    "resolutions": {
+        "d3": "~3.5.6"
+    }
 }
