--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "fontawesome": "~4.3.0",
     "crossfilter": "~1.3.11",
     "dcjs": "~2.0.0-beta.12",
-    "select2": "~3.5.2"
+    "select2": "~3.5.2",
+    "FileSaver": "*"
   },
   "resolutions": {
     "d3": "~3.5.6"
